correct word-spacing to letter-spaceing

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ a:hover {
   width: 100%;
   line-height: 1rem;
   font-size: .75rem;
-  word-spacing: .01rem;
+  letter-spacing: .01rem;
   text-align: justify;
 }
 .explainer a{
